[package]
name    = "zk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── HTTP / async runtime
axum  = "0.6"                                        # ← pin to 0.6 API
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }

# ── Serialization, logging, helpers
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tiny-keccak        = { version = "2", features = ["keccak"] }
bincode            = "1.3"
hex                = "0.4"
anyhow             = "1"                             # ← new

# ── Your proving crate (root)
zk-engine          = { path = ".." }

